--- a/kanew_flutter/pubspec.yaml
+++ b/kanew_flutter/pubspec.yaml
@@ -30,17 +30,26 @@ dependencies:
   kanew_client:
     path: ../kanew_client
   serverpod_auth_client: 3.2.0
+  serverpod_auth_shared_flutter: 3.2.0
   serverpod_auth_idp_flutter: 3.2.0
   serverpod_flutter: 3.2.0
+  http: ^1.1.0
   # Routing
-  zenrouter: ^0.4.17
   # UI Components
   forui: ^0.17.0
   # Secure storage for auth tokens
   flutter_secure_storage: ^10.0.0
-  provider: ^6.1.5+1
   get_it: ^9.2.0
 
+  serverpod_auth_core_flutter: any
+  shared_preferences: ^2.5.4
+  go_router: ^17.0.1
+  appflowy_board: ^0.1.2
+  dartz: ^0.10.1
+  intl: ^0.20.2
+  timeago: ^3.7.1
+  file_picker: ^10.3.8
+  url_launcher: ^6.3.2
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
   flutter_test:
