--- a/kanew_flutter/pubspec.yaml
+++ b/kanew_flutter/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   timeago: ^3.7.1
   file_picker: ^10.3.8
   url_launcher: ^6.3.2
+  flutter_svg: ^2.0.19
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
   flutter_test:
@@ -78,6 +79,10 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
   assets:
     - assets/config.json
+    - assets/icons/priority_high.svg
+    - assets/icons/priority_medium.svg
+    - assets/icons/priority_low.svg
+    - assets/icons/priority_none.svg
 dependency_overrides:
   flutter_secure_storage: ^10.0.0
 
