fix: resolve invite acceptance flow issues
- Enable path-based URL strategy for Flutter web (remove hash routing)
- Fix router redirect logic to preserve redirect parameter during workspace loading
- Add null handling for invite details in AcceptInvitePage
- Add extensive logging for debugging accept invite flow
- Fix router to check redirect parameter before workspace loading state

This fixes the issue where users were redirected to their default workspace
instead of the invite page after login.

--- a/kanew_server/lib/src/models/attachment.spy.yaml
+++ b/kanew_server/lib/src/models/attachment.spy.yaml
@@ -8,6 +8,6 @@ fields:
   size: int # Tamanho em bytes (conforme plan.md)
   storageKey: String # Chave no storage (S3/MinIO) - conforme plan.md
   fileUrl: String? # URL pública (opcional, pode ser gerada a partir de storageKey)
-  uploaderId: int # Quem fez upload (conforme plan.md)
+  uploaderId: UuidValue # Quem fez upload (conforme plan.md)
   createdAt: DateTime
   deletedAt: DateTime?
