--- a/kanew_flutter/pubspec.yaml
+++ b/kanew_flutter/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   file_picker: ^10.3.8
   url_launcher: ^6.3.2
   flutter_svg: ^2.0.19
+  flutter_web_plugins:
+    sdk: flutter
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
   flutter_test:
