--- a/kanew_server/lib/src/models/card.spy.yaml
+++ b/kanew_server/lib/src/models/card.spy.yaml
@@ -18,12 +18,12 @@ fields:
   isCompleted: bool
   
   createdAt: DateTime
-  createdBy: int
+  createdBy: UuidValue
   updatedAt: DateTime? # Conforme plan.md
   
   # Soft Delete
   deletedAt: DateTime?
-  deletedBy: int?
+  deletedBy: UuidValue?
 indexes:
   card_uuid_idx:
     fields: uuid
