--- a/kanew_server/lib/src/models/card_list.spy.yaml
+++ b/kanew_server/lib/src/models/card_list.spy.yaml
@@ -13,7 +13,7 @@ fields:
   
   # Soft Delete
   deletedAt: DateTime?
-  deletedBy: int?
+  deletedBy: UuidValue?
 indexes:
   card_list_uuid_idx:
     fields: uuid
