--- a/kanew_server/lib/src/models/comment.spy.yaml
+++ b/kanew_server/lib/src/models/comment.spy.yaml
@@ -2,7 +2,7 @@ class: Comment
 table: comment
 fields:
   cardId: int, relation(parent=card)
-  authorId: int # Conforme plan.md (userId -> authorId)
+  authorId: UuidValue # Conforme plan.md (userId -> authorId)
   content: String # Conforme plan.md (text -> content)
   createdAt: DateTime
   updatedAt: DateTime?
