--- a/kanew_server/config/production.yaml
+++ b/kanew_server/config/production.yaml
@@ -43,7 +43,7 @@ database:
 # If you are connecting on a public IP (e.g. on AWS or Google Cloud Run), you
 # connect on the public IP of the database e.g. redis.examplepod.com.
 redis:
-  enabled: false
+  enabled: true
   host: redis.private-production.examplepod.com
   port: 6379
   #user: # defaults to empty
