--- a/kanew_server/lib/src/models/board_event_type.spy.yaml
+++ b/kanew_server/lib/src/models/board_event_type.spy.yaml
@@ -12,6 +12,12 @@ values:
   - listReordered
   - listDeleted
   - listArchived
+  # Label events
+  - labelCreated
+  - labelUpdated
+  - labelDeleted
+  # Card label events
+  - cardLabelsUpdated
   # Board events
   - boardUpdated
   - boardDeleted
