--- a/kanew_flutter/pubspec.yaml
+++ b/kanew_flutter/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   google_fonts: ^6.3.3
+  appflowy_editor: ^6.2.0
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
   flutter_test:
