--- a/kanew_flutter/pubspec.yaml
+++ b/kanew_flutter/pubspec.yaml
@@ -54,7 +54,12 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   google_fonts: ^6.3.3
-  appflowy_editor: ^6.2.0
+  # appflowy_editor: ^6.2.0 # Substituído por super_editor
+  super_editor:
+    git:
+      url: https://github.com/Flutter-Bounty-Hunters/super_editor
+      path: super_editor
+      ref: main
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
   flutter_test:
