--- a/kanew_server/config/passwords.yaml
+++ b/kanew_server/config/passwords.yaml
@@ -45,6 +45,7 @@ test:
 production:
   # Use environment variables or secrets manager
   database: '%SERVERPOD_PASSWORD_database%'
+  redis: '%SERVERPOD_PASSWORD_redis%'
   jwtRefreshTokenHashPepper: '%SERVERPOD_PASSWORD_jwtRefreshTokenHashPepper%'
   jwtHmacSha512PrivateKey: '%SERVERPOD_PASSWORD_jwtHmacSha512PrivateKey%'
   emailSecretHashPepper: '%SERVERPOD_PASSWORD_emailSecretHashPepper%'
