--- a/kanew_flutter/pubspec.yaml
+++ b/kanew_flutter/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Routing
   # UI Components
   forui: ^0.17.0
+  follow_the_leader: ^0.5.2
   # Secure storage for auth tokens
   flutter_secure_storage: ^10.0.0
   get_it: ^9.2.0
@@ -60,6 +61,9 @@ dependencies:
       url: https://github.com/Flutter-Bounty-Hunters/super_editor
       path: super_editor
       ref: main
+  super_editor_clipboard: ^0.2.5
+  super_clipboard: ^0.9.1
+  html2md: ^1.3.2
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
   flutter_test:
@@ -98,6 +102,11 @@ flutter:
     - assets/icons/check.svg
 dependency_overrides:
   flutter_secure_storage: ^10.0.0
+  super_editor:
+    git:
+      url: https://github.com/Flutter-Bounty-Hunters/super_editor
+      path: super_editor
+      ref: main
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
