--- a/kanew_server/config/production.yaml
+++ b/kanew_server/config/production.yaml
@@ -7,49 +7,45 @@
 # Configuration for the main API server.
 apiServer:
   port: 8080
-  publicHost: api.examplepod.com
+  publicHost: '%RAILWAY_PUBLIC_DOMAIN%'
   publicPort: 443
   publicScheme: https
 
 # Configuration for the Insights server.
 insightsServer:
   port: 8081
-  publicHost: insights.examplepod.com
+  publicHost: '%RAILWAY_PUBLIC_DOMAIN%'
   publicPort: 443
   publicScheme: https
 
 # Configuration for the web server.
 webServer:
   port: 8082
-  publicHost: app.examplepod.com
+  publicHost: '%RAILWAY_PUBLIC_DOMAIN%'
   publicPort: 443
   publicScheme: https
 
-# This is the database setup for your servers. The default for the Google Cloud
-# Engine Terraform configuration is to connect on a private IP address.
-# If you are connecting on a public IP (e.g. on AWS or Google Cloud Run), you
-# connect on the public IP of the database e.g. database.examplepod.com.
+# This is the database setup for your servers.
+# Using Railway's internal network for secure connections.
 database:
-  host: database.private-production.examplepod.com
+  host: postgres.railway.internal
   port: 5432
-  name: serverpod
+  name: railway
   user: postgres
-  requireSsl: true
+  requireSsl: false
   #isUnixSocket: true # defaults to false
   #maxConnectionCount: 10 # Defaults to 10, a negative or null value removes the limit
 
-# This is the setup for Redis. The default for the Google Cloud Engine Terraform
-# configuration is to connect on a private IP address.
-# If you are connecting on a public IP (e.g. on AWS or Google Cloud Run), you
-# connect on the public IP of the database e.g. redis.examplepod.com.
+# This is the setup for Redis.
+# Using Railway's internal network for secure connections.
 redis:
-  enabled: true
-  host: redis.private-production.examplepod.com
+  enabled: false
+  host: redis.railway.internal
   port: 6379
   #user: # defaults to empty
-  #requireSsl: true # defaults to false
-
-maxRequestSize: 524288 # The maximum size of requests allowed in bytes
+  #requireSsl: false # defaults to false
+ 
+maxRequestSize: 52428800 # 50MB - Maximum size of requests allowed in bytes
 
 sessionLogs:
   consoleEnabled: false
