chore: railway deploy cleanup and configuration
- Add Railway deployment files (Dockerfile, railway.yaml, railway-config.yaml)
- Remove deprecated auth files (auth_gate.dart, auth_service.dart)
- Update Docker configs for server and flutter
- Add Railway production configuration
- Clean up Flutter generated plugin files

--- a/kanew_server/config/production.yaml
+++ b/kanew_server/config/production.yaml
@@ -39,7 +39,8 @@ database:
 # This is the setup for Redis.
 # Using Railway's internal network for secure connections.
 redis:
-  enabled: false
+  # Toggle with env var: REDIS_ENABLED=true|false (default: false)
+  enabled: %REDIS_ENABLED%
   host: redis.railway.internal
   port: 6379
   #user: # defaults to empty
