--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERSION: '3.1.1'
-      SERVERPOD_PASSWORD_database: '0Hu7cFxzKYeeoGuIRqkRoIEHVte-ELVJ'
-      SERVERPOD_PASSWORD_redis: 'WEF7sbrhavyRTkoVqiZ5XjtuRlIfMtlr'
+      SERVERPOD_PASSWORD_database: ${{ secrets.TEST_DB_PASSWORD }}
+      SERVERPOD_PASSWORD_redis: ${{ secrets.TEST_REDIS_PASSWORD }}
 
     steps:
       - uses: actions/checkout@v4
